--- a/src/MobileSlidebar.css
+++ b/src/MobileSlidebar.css
@@ -49,5 +49,22 @@
 }
 
 .MobileSideButton.active {
-    background-color: #f0f0f0; /* Add background color for active button */
+    background-color: red; 
+}
+
+.active {
+    background-image: linear-gradient(navy,red);
+    font-weight: bold;
+    color: white;
+    width: 90%;
+    height: 50px;
+    border: none;
+    border-radius: 24px;
+    /* border-top-right-radius: 24px;
+    border-bottom-right-radius: 24px; */
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    text-decoration: none;
+
 }
