--- a/src/App.css
+++ b/src/App.css
@@ -134,8 +134,8 @@ body, html {
 
 .i-heading{
   color:white;
-  font-size: 52px;
-  max-width: 380px;
+  /* font-size: 42px; */
+  max-width: 450px;
 
 }
 
