--- a/src/Reports.css
+++ b/src/Reports.css
@@ -152,3 +152,30 @@ span{
     background-color: rgba(255, 255, 255, 0.8); /* Optional: Add a semi-transparent background */
     z-index: 9999; /* Ensure the spinner is on top of other content */
 }
+
+
+/* datatable */
+/* button {
+    padding: 10px;
+    font-size: 16px;
+    background-color:gray;
+    color: white;
+    border: none;
+    cursor: pointer;
+    border-radius: 16px;
+  }
+  
+  button:hover {
+    background-color: #0056b3;
+  }
+   */
+   .report-back-button{
+    padding: 10px;
+    font-size: 16px;
+    background-color:blue;
+    color: white;
+    border: none;
+    cursor: pointer;
+    border-radius: 8px;
+    margin-bottom: 5px;
+   }
